Fixed portfolio section background image not align to bottom error

--- a/src/style/dashboard.less
+++ b/src/style/dashboard.less
@@ -203,6 +203,7 @@
 
             img {
                 width: 100%;
+                vertical-align: bottom;
             }
         }
         .bg-top-right {
